[gd_scene load_steps=9 format=2]

[ext_resource path="res://064_Pertemuan_3_4_task1/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Backround/bekgronbaru.jpg" type="Texture" id=2]
[ext_resource path="res://projek1.tres" type="DynamicFont" id=3]
[ext_resource path="res://Font/Valorax-lg25V.otf" type="DynamicFontData" id=4]
[ext_resource path="res://Font/Silkscreen-Regular.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 25
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 57
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[node name="MainMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="Backround" type="Sprite" parent="."]
position = Vector2( 513.792, 299.154 )
scale = Vector2( 0.170069, 0.203897 )
texture = ExtResource( 2 )

[node name="About" type="Button" parent="."]
margin_left = 454.0
margin_top = 304.0
margin_right = 635.0
margin_bottom = 362.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 3 )
text = "About"

[node name="Page1" type="Button" parent="."]
margin_left = 654.0
margin_top = 376.0
margin_right = 874.0
margin_bottom = 418.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "Bentuk Dasar"

[node name="Page2" type="Button" parent="."]
margin_left = 252.0
margin_top = 376.0
margin_right = 469.0
margin_bottom = 418.0
custom_fonts/font = SubResource( 2 )
text = "Lingkaran Ovelaping"

[node name="Page3" type="Button" parent="."]
margin_left = 248.0
margin_top = 437.0
margin_right = 471.0
margin_bottom = 483.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "Bunga 4 Kelopak"

[node name="Page4" type="Button" parent="."]
margin_left = 657.0
margin_top = 440.0
margin_right = 879.0
margin_bottom = 486.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "Bunga 8 Kelopak"

[node name="Judul" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 200.0
margin_top = 122.0
margin_right = 889.0
margin_bottom = 270.0
rect_pivot_offset = Vector2( 568, 77 )
custom_fonts/font = SubResource( 4 )
text = "-Space shooter-"
align = 1
autowrap = true

[connection signal="pressed" from="About" to="." method="_buttonAbout"]
[connection signal="pressed" from="Page1" to="." method="_buttonPage1"]
[connection signal="pressed" from="Page2" to="." method="_buttonPage2"]
[connection signal="pressed" from="Page3" to="." method="_buttonPage3"]
[connection signal="pressed" from="Page4" to="." method="_buttonPage4"]
